--- a/docker-swarm/Dockerfile
+++ b/docker-swarm/Dockerfile
@@ -5,7 +5,7 @@ FROM python:2.7-slim
 WORKDIR /app
 
 # Copy the current directory contents into the container at /app
-COPY ./app/* /app/
+COPY app /app/
 
 # Install any needed packages specified in requirements.txt
 RUN pip install --trusted-host pypi.python.org -r requirements.txt
